--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "version": "5.4.0"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
+    "bulma-stylus": "0.8.0",
     "hexo": "^5.0.0",
-    "hexo-filter-mathjax-ssr": "^0.1.1",
+    "hexo-algolia": "^1.3.2",
+    "hexo-component-inferno": "^0.14.0",
+    "hexo-deployer-git": "^3.0.0",
+    "hexo-filter-github-emojis": "^3.0.4",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-theme-inside": "^2.7.0-beta.23",
-    "hexo-theme-landscape": "^0.0.3",
-    "html-minifier": "^4.0.0",
-    "terser": "^5.10.0"
+    "hexo-theme-icarus": "^4.5.0"
   }
 }
