--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://wenju.github.io/blog/
-root: /blog/
+url: http://blog.gaowenju.com
+root: /
 permalink: :category/:post_title/
 permalink_defaults:
 
